--- a/index.html
+++ b/index.html
@@ -987,8 +987,8 @@
         <h2 style="font-size: 2.5rem; margin-bottom: 1rem;">احصل على خصم 40%</h2>
         <p style="font-size: 1.3rem; margin-bottom: 1.5rem;">استخدم كود الخصم عند الطلب:</p>
         <div class="promo-code">HROOF40</div>
-        <a href="https://wa.me/966500042708" target="_blank" class="cta-button">
-            💬 اطلب اللعبة الآن عبر واتساب
+        <a href="https://t.me/mprotocol" target="_blank" class="cta-button">
+            💬 اطلب كود التفعيل الآن من خلال موظف المبيعات
         </a>
         <p class="timer">⏳ العرض ينتهي خلال 72 ساعة</p>
     </section>
@@ -1023,7 +1023,12 @@
                 <li class="feature-item limited">⚠️ شاشة الجمهور ذات قدرة زمنية محدودة</li>
                 <li class="feature-item disabled">❌ لا يتيح البث إلى المتصفح</li>
             </ul>
-            <a href="https://wa.me/966500042708" target="_blank" class="version-button free-button">تحميل مجاني</a>
+            <a href="assets/HuroofGame1.0_SETUP.zip" download class="version-button free-button">
+                    ⬇️ تحميل الإصدار المجاني (ZIP)
+                </a>
+                <small style="display:block; color: var(--text-muted); margin-top: 8px;">
+                    بعد التحميل، قم بفك الضغط ثم شغّل الملف HuroofGame1.0_SETUP.exe
+                </small>
         </div>
         <div class="version-card pro-version">
             <div class="popular-badge">الأكثر شعبية</div>
