--- a/index.html
+++ b/index.html
@@ -1017,11 +1017,18 @@
                 <h3>الإصدار المجاني</h3>
             </div>
             <ul class="features-list">
-                <li class="feature-item">✅ مجاني بالكامل ولا يحتاج كود تفعيل</li>
-                <li class="feature-item">✅ إمكانية تشغيل اللعبة لمدة غير محدودة</li>
+                <li class="feature-item">✅ كود تفعيل مجاني مدى الحياة</li>
+                <li class="feature-item">✅ إمكانية تشغيل اللعبة لمدة 10 دقائق لكل جلسة</li>
+                <li class="feature-item">✅ عدد جلسات غير محدود</li>
+                <li class="feature-item">✅ إمكانية ترقية التفعيل أي وقت من داخل البرنامج</li>
+                <li class="feature-item">✅ امكانية الاستمتاع بأكثر من 40 سؤال مجانا</li>
+                <li class="feature-item">✅ يعطيك تجربة شبه متكاملة لبرنامج حروف المعهود</li>
                 <li class="feature-item limited">⚠️ عدد محدود من الأسئلة</li>
-                <li class="feature-item limited">⚠️ شاشة الجمهور ذات قدرة زمنية محدودة</li>
+                <li class="feature-item limited">⚠️ لا يسحب الأسئلة من ملف خارجي</li>
+                <li class="feature-item limited">❌ لا يفتح نافذة إدارة بنك الاسئلة المتطورة</li>
+                <li class="feature-item limited">❌ لا يمكن استخدام شاشة الجمهور</li>
                 <li class="feature-item disabled">❌ لا يتيح البث إلى المتصفح</li>
+                <li class="feature-item limited">⚠️ لا يحفظ الاعدادات عند الاغلاق</li>
             </ul>
             <a href="assets/HuroofGame1.0_SETUP.zip" download class="version-button free-button">
                     ⬇️ تحميل الإصدار المجاني (ZIP)
@@ -1035,18 +1042,22 @@
             <div class="version-header">
                 <h3>الإصدار الاحترافي</h3>
                 <div class="price">
-                    <span class="old-price">1300 USD</span>
-                    <span class="currency">550 USD</span>
+                    <span class="old-price">200 USD</span>
+                    <span class="currency">100 USD</span>
                     <span class="period">مدى الحياة</span>
                 </div>
             </div>
             <ul class="features-list">
                 <li class="feature-item">🔒 يحتاج كود شراء وتفعيل</li>
-                <li class="feature-item">✅ تشغيل اللعبة مدى الحياة</li>
-                <li class="feature-item">✅ ضمان تشغيل على نفس الجهاز</li>
-                <li class="feature-item">✅ بنك أسئلة مجاني قابل للزيادة من خلال ملف نصي</li>
-                <li class="feature-item">✅ شاشة جمهور متقدمة تعمل بلا توقف</li>
-                <li class="feature-item">✅ يسمح بالبث للمتصفح</li>
+                <li class="feature-item">✅ تشغيل اللعبة مدى الحياة بدون حدود زمنية</li>
+                <li class="feature-item">✅ يعمل على جهازك بثبات مع ضمان تشغيل دائم</li>
+                <li class="feature-item">✅ فتح برنامج إدارة بنك الأسئلة المتطورة</li>
+                <li class="feature-item">✅ بنك أسئلة مجاني مدمج + إمكانية إضافة ألوف الأسئلة من ملف خارجي</li>
+                <li class="feature-item">✅ استخدام شاشة الجمهور بدون أي قيود</li>
+                <li class="feature-item">✅ يتيح البث المباشر إلى المتصفح داخل الشبكة المحلية</li>
+                <li class="feature-item">✅ يحفظ جميع الإعدادات والتعديلات تلقائيًا عند الإغلاق</li>
+                <li class="feature-item">✅ يدعم تخصيص الإعدادات وصورة الاحتفال في شاشة الجمهور</li>
+                <li class="feature-item">✅ يفتح جميع الأدوات والخصائص الإضافية داخل البرنامج</li>
             </ul>
             <a href="https://wa.me/966500042708" target="_blank" class="version-button pro-button">اطلب النسخة الاحترافية</a>
         </div>
