--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,8 @@
                 <li class="feature-item">✅ تشغيل اللعبة مدى الحياة بدون حدود زمنية</li>
                 <li class="feature-item">✅ يعمل على جهازك بثبات مع ضمان تشغيل دائم</li>
                 <li class="feature-item">✅ فتح برنامج إدارة بنك الأسئلة المتطورة</li>
-                <li class="feature-item">✅ بنك أسئلة مجاني مدمج + إمكانية إضافة ألوف الأسئلة من ملف خارجي</li>
+                <li class="feature-item">✅ بنك أسئلة مجاني مدمج</li>
+                <li class="feature-item">✅ إمكانية إضافة ألوف الأسئلة من ملف خارجي</li>
                 <li class="feature-item">✅ استخدام شاشة الجمهور بدون أي قيود</li>
                 <li class="feature-item">✅ يتيح البث المباشر إلى المتصفح داخل الشبكة المحلية</li>
                 <li class="feature-item">✅ يحفظ جميع الإعدادات والتعديلات تلقائيًا عند الإغلاق</li>
