--- a/index.html
+++ b/index.html
@@ -1065,14 +1065,36 @@
 </div>
 </section>
 <section class="comparison-section">
-<h2 class="comparison-title">مقارنة بين الإصدار المجاني والاحترافي</h2>
+<h2 class="comparison-title">مقارنة بين الإصدارات</h2>
 <div class="comparison-grid">
+<div class="version-card">
+<div class="version-header">
+<h3>الإصدار المجاني</h3>
+</div>
+<ul class="features-list">
+<li class="feature-item">✅ كود تفعيل مجاني مدى الحياة</li>
+<li class="feature-item">✅ إمكانية تشغيل اللعبة لمدة 10 دقائق لكل جلسة</li>
+<li class="feature-item">✅ عدد جلسات غير محدود</li>
+<li class="feature-item">✅ إمكانية ترقية التفعيل أي وقت من داخل البرنامج</li>
+<li class="feature-item">✅ امكانية الاستمتاع بأكثر من 40 سؤال مجانا</li>
+<li class="feature-item">✅ يعطيك تجربة شبه متكاملة لبرنامج حروف المعهود</li>
+<li class="feature-item limited">⚠️ عدد محدود من الأسئلة</li>
+<li class="feature-item limited">⚠️ لا يسحب الأسئلة من ملف خارجي</li>
+<li class="feature-item limited">❌ لا يفتح نافذة إدارة بنك الاسئلة المتطورة</li>
+<li class="feature-item limited">❌ لا يمكن استخدام شاشة الجمهور</li>
+<li class="feature-item limited">❌ لا يتيح البث إلى المتصفح</li>
+<li class="feature-item limited">⚠️ لا يحفظ الاعدادات عند الاغلاق</li>
+</ul>
+<a class="version-button free-button" download="" href="https://t.me/mprotocol" target="_blank">اطلب الآن </a>
+<small style="display:block; color: var(--text-muted); margin-top: 8px;">
+                    بعد التحميل، قم بفك الضغط ثم شغّل الملف HuroofGame1.0_SETUP.exe
+                </small>
+</div>
 <div class="version-card pro-version">
-<div class="popular-badge">الأكثر شعبية</div>
 <div class="version-header">
 <h3>الإصدار السنوي</h3>
 <div class="price">
-<span class="old-price">64 USD</span>
+<span class="old-price">80 USD</span>
 <span class="currency">32 USD</span>
 <span class="period">صالح لمدة سنة</span>
 </div>
@@ -1090,36 +1112,14 @@
 <li class="feature-item">✅ يدعم تخصيص الإعدادات وصورة الاحتفال في شاشة الجمهور</li>
 <li class="feature-item">✅ يفتح جميع الأدوات والخصائص الإضافية داخل البرنامج</li>
 <li class="feature-item limited">⚠️ يحتاج تجديد بعد سنة</li></ul>
-<a class="version-button pro-button" href="https://t.me/mprotocol" target="_blank">اطلب الآن عبر تيليجرام</a>
-</div><div class="version-card">
-<div class="version-header">
-<h3>الإصدار المجاني</h3>
-</div>
-<ul class="features-list">
-<li class="feature-item">✅ كود تفعيل مجاني مدى الحياة</li>
-<li class="feature-item">✅ إمكانية تشغيل اللعبة لمدة 10 دقائق لكل جلسة</li>
-<li class="feature-item">✅ عدد جلسات غير محدود</li>
-<li class="feature-item">✅ إمكانية ترقية التفعيل أي وقت من داخل البرنامج</li>
-<li class="feature-item">✅ امكانية الاستمتاع بأكثر من 40 سؤال مجانا</li>
-<li class="feature-item">✅ يعطيك تجربة شبه متكاملة لبرنامج حروف المعهود</li>
-<li class="feature-item limited">⚠️ عدد محدود من الأسئلة</li>
-<li class="feature-item limited">⚠️ لا يسحب الأسئلة من ملف خارجي</li>
-<li class="feature-item limited">❌ لا يفتح نافذة إدارة بنك الاسئلة المتطورة</li>
-<li class="feature-item limited">❌ لا يمكن استخدام شاشة الجمهور</li>
-<li class="feature-item disabled">❌ لا يتيح البث إلى المتصفح</li>
-<li class="feature-item limited">⚠️ لا يحفظ الاعدادات عند الاغلاق</li>
-</ul>
-<a class="version-button free-button" download="" href="https://t.me/mprotocol" target="_blank">اطلب الآن عبر تيليجرام</a>
-<small style="display:block; color: var(--text-muted); margin-top: 8px;">
-                    بعد التحميل، قم بفك الضغط ثم شغّل الملف HuroofGame1.0_SETUP.exe
-                </small>
+<a class="version-button pro-button" href="https://t.me/mprotocol" target="_blank">اطلب الآن </a>
 </div>
 <div class="version-card pro-version">
 <div class="popular-badge">الأكثر شعبية</div>
 <div class="version-header">
 <h3>الإصدار الاحترافي</h3>
 <div class="price">
-<span class="old-price">200 USD</span>
+<span class="old-price">250 USD</span>
 <span class="currency">100 USD</span>
 <span class="period">مدى الحياة</span>
 </div>
@@ -1137,7 +1137,7 @@
 <li class="feature-item">✅ يدعم تخصيص الإعدادات وصورة الاحتفال في شاشة الجمهور</li>
 <li class="feature-item">✅ يفتح جميع الأدوات والخصائص الإضافية داخل البرنامج</li>
 </ul>
-<a class="version-button pro-button" href="https://t.me/mprotocol" target="_blank">اطلب الآن عبر تيليجرام</a>
+<a class="version-button pro-button" href="https://t.me/mprotocol" target="_blank">اطلب الآن </a>
 </div>
 </div>
 </section><div style="text-align: center; margin: 3rem 0;"><a class="version-button free-button" download="" href="assets/HuroofGame1.0_SETUP.zip">⬇️ تحميل البرنامج الموحد (ZIP)</a><p style="color: var(--text-muted); margin-top: 8px;">بعد التحميل، قم بفك الضغط وتشغيل HuroofGame1.0_SETUP.exe</p></div>
