--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@
 <li class="feature-item limited">⚠️ لا يحفظ الاعدادات عند الاغلاق</li>
 </ul>
 <a class="version-button free-button" download="" href="https://t.me/mprotocol" target="_blank">اطلب الآن </a>
-<small style="display:block; color: var(--text-muted); margin-top: 8px;">
+<small style="display:block; color: var(--text-muted); margin-top: 8px;" id="freeVersionInstructions">
                     بعد التحميل، قم بفك الضغط ثم شغّل الملف HuroofGame1.0_SETUP.exe
                 </small>
 </div>
@@ -1149,8 +1149,76 @@
     <span class="close-modal">&times;</span>
     <img class="modal-content" id="modalImage"/>
 </div>
+
+<!-- Free Version Keys Modal -->
+<div id="freeKeysModal" class="modal">
+    <div class="modal-content" style="max-width: 600px; background-color: var(--bg-light); padding: 20px; border-radius: 15px; color: var(--text-primary);">
+        <span class="close-modal" style="color: var(--text-primary);">&times;</span>
+        <h2 style="text-align: center; margin-bottom: 20px; color: var(--primary-gold);">مفاتيح تفعيل النسخة المجانية</h2>
+        <ul style="list-style: none; padding: 0;">
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">T9K2W8Y4M6Z0R1C7J5LD</span>
+                <button onclick="copyKey('T9K2W8Y4M6Z0R1C7J5LD')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">B3X7Q9P6H0S2V4N1M8TA</span>
+                <button onclick="copyKey('B3X7Q9P6H0S2V4N1M8TA')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">L5Z0R9K3J2Y6Q1X8MBWT</span>
+                <button onclick="copyKey('L5Z0R9K3J2Y6Q1X8MBWT')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">M9P4V6H1J7Y2N3T0C5LX</span>
+                <button onclick="copyKey('M9P4V6H1J7Y2N3T0C5LX')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">C1D7X3L9Q0M8Y2V5KJTR</span>
+                <button onclick="copyKey('C1D7X3L9Q0M8Y2V5KJTR')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">Y0W5N4C3K2R9Q8JLM6TP</span>
+                <button onclick="copyKey('Y0W5N4C3K2R9Q8JLM6TP')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">V6M9J4Q0X1C7T5LYK8PR</span>
+                <button onclick="copyKey('V6M9J4Q0X1C7T5LYK8PR')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">J3C9K5Y0M2W8QTLX1R7V</span>
+                <button onclick="copyKey('J3C9K5Y0M2W8QTLX1R7V')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px; border-bottom: 1px solid var(--text-muted);">
+                <span style="margin-left: 10px;">R8X1M0Y6K3JVC9T2LQW5</span>
+                <button onclick="copyKey('R8X1M0Y6K3JVC9T2LQW5')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+            <li style="display: flex; align-items: center; justify-content: space-between; padding: 10px;">
+                <span style="margin-left: 10px;">Q7V5K9T3Y1JXLM0C2WR8</span>
+                <button onclick="copyKey('Q7V5K9T3Y1JXLM0C2WR8')" style="background-color: var(--primary-gold); color: var(--bg-dark); padding: 5px 10px; border: none; border-radius: 5px; cursor: pointer;">نسخ</button>
+            </li>
+        </ul>
+        <div style="margin-top: 20px; padding: 10px; background-color: rgba(255, 255, 255, 0.1); border-radius: 5px;">
+            <p style="font-weight: bold; color: var(--text-secondary);">تعليمات التفعيل:</p>
+            <ol style="padding-right: 20px; color: var(--text-secondary);">
+                <li>قم بتحميل ملف تنصيب البرنامج من الرابط أسفل الصفحة.</li>
+                <li>قم بتنصيب البرنامج.</li>
+                <li>استخدم واحدًا من المفاتيح بالأعلى لتفعيل نسختك المجانية.</li>
+            </ol>
+        </div>
+    </div>
+</div>
 <!-- Simple Analytics (Optional) -->
 <script>
+        // Function to copy key to clipboard
+        function copyKey(key) {
+            navigator.clipboard.writeText(key).then(function() {
+                alert("تم نسخ المفتاح: " + key);
+            }, function(err) {
+                console.error('Could not copy text: ', err);
+                alert("حدث خطأ أثناء نسخ المفتاح.");
+            });
+        }
+
         // Image Modal Logic
         const modal = document.getElementById("imageModal");
         const modalImg = document.getElementById("modalImage");
@@ -1173,6 +1241,34 @@
         // Close modal when clicking on the background overlay
         modal.addEventListener('click', (event) => {
             if (event.target === modal) {
+                closeModal();
+            }
+        });
+
+        // Free Keys Modal Logic
+        const freeKeysModal = document.getElementById("freeKeysModal");
+        const freeVersionButton = document.querySelector('.free-button');
+        const freeVersionInstructions = document.getElementById("freeVersionInstructions");
+        const closeFreeKeysModalBtn = document.querySelector("#freeKeysModal .close-modal");
+
+        // Prevent default behavior (Telegram link) and show modal instead
+        freeVersionButton.addEventListener('click', function(event) {
+            event.preventDefault();
+            freeKeysModal.style.display = "flex";
+        });
+
+        // Hide instructions when showing the modal
+        freeVersionButton.addEventListener('click', function() {
+            freeVersionInstructions.style.display = "none";
+        });
+
+        closeFreeKeysModalBtn.addEventListener('click', function() {
+            freeKeysModal.style.display = "none";
+            freeVersionInstructions.style.display = "block"; // Show instructions again
+        });
+
+        freeKeysModal.addEventListener('click', (event) => {
+            if (event.target === freeKeysModal) {
                 closeModal();
             }
         });
