--- a/index.html
+++ b/index.html
@@ -1055,6 +1055,7 @@
 <div class="screenshot-grid">
 <div class="screenshot-card">
 <div class="screenshot-placeholder">🖼️ واجهة اللعبة الرئيسية</div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/53oGLJEyU90?si=yU0PV14ktzqd3bE5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
 <div class="screenshot-card">
 <div class="screenshot-placeholder">🖼️ شاشة العرض للجمهور</div>
