--- a/index.html
+++ b/index.html
@@ -1125,8 +1125,7 @@
 </div>
 <ul class="features-list">
 <li class="feature-item">🔒 يحتاج كود شراء وتفعيل</li>
-<li class="feature-item">✅ تشغيل اللعبة مدى الحياة بدون حدود زمنية</li>
-<li class="feature-item">✅ يعمل على جهازك بثبات مع ضمان تشغيل دائم</li>
+<li class="feature-item">✅ يعمل على جهازك بثبات مع ضمان التشغيل </li>
 <li class="feature-item">✅ فتح برنامج إدارة بنك الأسئلة المتطورة</li>
 <li class="feature-item">✅ بنك أسئلة مجاني مدمج</li>
 <li class="feature-item">✅ إمكانية إضافة ألوف الأسئلة من ملف خارجي</li>
