--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
 </section>
 <section class="screenshots">
 <h2>شاهد اللعبة في العمل</h2>
-<div class="screenshot-grid">
+<div class="screenshot-grid features">
 <div class="screenshot-card">
     <div class="video-container">
         <iframe src="https://www.youtube.com/embed/53oGLJEyU90?si=yU0PV14ktzqd3bE5" 
@@ -1078,7 +1078,7 @@
                 referrerpolicy="strict-origin-when-cross-origin" 
                 allowfullscreen></iframe>
     </div>
-    <p style="text-align: center; margin-top: 1rem; color: var(--primary-gold);">واجهة اللعبة الرئيسية</p>
+    <p style="text-align: center; margin-top: 1rem; color: var(--primary-gold);">برومو لعبة حروف</p>
 </div>
 <div class="screenshot-card">
 <div class="screenshot-placeholder">🖼️ شاشة العرض للجمهور</div>
