--- a/index.html
+++ b/index.html
@@ -780,6 +780,7 @@
             color: var(--bg-dark);
             padding: 0.5rem 2rem;
             border-radius: 50px;
+            white-space: nowrap;
             font-weight: 700;
             font-size: 0.7rem;
             box-shadow: 0 5px 15px rgba(255, 215, 0, 0.3);
