--- a/index.html
+++ b/index.html
@@ -1164,8 +1164,12 @@
 <a class="version-button pro-button" href="https://t.me/mprotocol" target="_blank">اطلب الآن </a>
 </div>
 </div>
-</section><div style="text-align: center; margin: 3rem 0;"><a class="version-button free-button" download="" href="assets/HuroofGame1.0_SETUP.zip">⬇️ تحميل البرنامج الموحد (ZIP)</a><p style="color: var(--text-muted); margin-top: 8px;">بعد التحميل، قم بفك الضغط وتشغيل HuroofGame1.0_SETUP.exe</p></div>
-<footer>
+</section>
+<div style="text-align: center; margin: 3rem 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem;">
+    <a class="version-button free-button" download="" href="assets/HuroofGame1.0_SETUP.zip">⬇️ تحميل البرنامج (ZIP)</a>
+    <a class="version-button free-button" download="" href="assets/Default_QBank.txt">⬇️ بنك 3700 سؤال (TXT)</a>
+    <p style="color: var(--text-muted); margin-top: 8px; width: 100%;">بعد التحميل، قم بفك الضغط وتشغيل HuroofGame1.0_SETUP.exe</p>
+</div><footer>
 <p>لعبة حروف | جميع الحقوق محفوظة © 2025</p>
 </footer>
 <!-- Image Modal -->
